--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,3 +1,9 @@
-<p>
-  home-page works!
-</p>
+<main role="main" class="inner cover">
+  <h1 class="cover-heading">Coffee Time</h1>
+  <p class="lead">Coffee time is an example angular 2+ web application created for fun. Use it to track and manage whose turn it is to pick
+    up the coffee round.
+  </p>
+  <p class="lead">
+    <a href="#" class="btn btn-lg btn-secondary">Create Coffee Team</a>
+  </p>
+</main>
