created create team page and structure reorg.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <h3 class="masthead-brand">Coffee Time</h3>
     <nav class="nav nav-masthead justify-content-center">
       <a class="nav-link active" [routerLink]="['/']">Home</a>
+      <a class="nav-link" [routerLink]="['/create-team']">Create Team</a>
       <a class="nav-link" [routerLink]="['/about']">About</a>
     </nav>
   </div>
