--- a/src/app/containers/home-page/home-page.component.html
+++ b/src/app/containers/home-page/home-page.component.html
@@ -4,6 +4,6 @@
     up the coffee round.
   </p>
   <p class="lead">
-    <a href="#" class="btn btn-lg btn-secondary">Create Coffee Team</a>
+    <a [routerLink]="['/create-team']" class="btn btn-lg btn-secondary">Create Coffee Team</a>
   </p>
 </main>
