work on add user

--- a/src/app/containers/manage-team/manage-team.component.html
+++ b/src/app/containers/manage-team/manage-team.component.html
@@ -11,4 +11,7 @@
                value="{{currentUrl}}">
     </div>
     <user-list></user-list>
+
+    <button (click)="addUser()">Add User</button>
+
 </div>
