--- a/src/app/containers/manage-team/manage-team.component.html
+++ b/src/app/containers/manage-team/manage-team.component.html
@@ -10,7 +10,7 @@
                [disabled]=true
                value="{{currentUrl}}">
     </div>
-    <user-list></user-list>
+    <user-list [users]="users$ |async"></user-list>
 
     <button (click)="addUser()">Add User</button>
 
