--- a/src/app/containers/manage-team/manage-team.component.html
+++ b/src/app/containers/manage-team/manage-team.component.html
@@ -1,6 +1,8 @@
-<div class="container">
+<div class="container"
+     *ngIf="(team$ | async) as team">
     <div class="py-5">
-        <h2>Manage Team</h2>
+        <h2>Manage Team </h2>
+        <h3>{{team.name }}</h3>
     </div>
     <div class="form-group">
         <label for="currentUrl">Mange Team URL(Private)</label>
