--- a/src/app/containers/team/team.component.html
+++ b/src/app/containers/team/team.component.html
@@ -4,9 +4,13 @@
             <h2>
                 Team {{team.name}}, user {{user.name}}
             </h2>
-            <span>
-                {{allUsers | json}}
-            </span>
+<app-user-stats [users]="allUsers"></app-user-stats>
         </div>
+      <div>
+        <a  [routerLink]="['add-coffee']">Add Coffee</a>
+      </div>
+      <div>
+        <router-outlet></router-outlet>
+      </div>
     </ng-container>
 </ng-container>
