Work on add coffee transactions

--- a/src/app/components/select-user/select-user.component.html
+++ b/src/app/components/select-user/select-user.component.html
@@ -1,5 +1,5 @@
 <div>
 <div *ngFor="let user of users">
-  <app-user-tile [user]="user" [selected]="!!selectedUsers[user.id]" (click)="userClickHandler($event)"></app-user-tile>
+  <app-user-tile [user]="user" [selected]="!!selectedUsers[user.id]" (selectUser)="userClickHandler($event)"></app-user-tile>
 </div>
 </div>
