Fix broken tests

--- a/src/app/components/user-tile/user-tile.component.html
+++ b/src/app/components/user-tile/user-tile.component.html
@@ -1,11 +1,13 @@
-<button (click)="clickHander()">
-<div >
-  <div>
-  {{user.initials}}
-</div>
-<div>
-  {{user.name}}
-</div>
-  <div>{{selected}}</div>
-</div>
-</button>
+<ng-container *ngIf="user">
+  <button (click)="clickHander()">
+    <div>
+      <div>
+        {{user.initials}}
+      </div>
+      <div>
+        {{user.name}}
+      </div>
+      <div>{{selected}}</div>
+    </div>
+  </button>
+</ng-container>
