Fix broken build

--- a/src/app/containers/create-team/create-team.component.html
+++ b/src/app/containers/create-team/create-team.component.html
@@ -5,7 +5,7 @@
     <form #heroForm="ngForm"
           class="needs-validation"
           novalidate
-          (ngSubmit)="onSubmit(heroForm)">
+          (ngSubmit)="onSubmit()">
         <label for="team-name"> Team Name</label>
         <input autocomplete="off"
                class="form-control"
