Add integration tests to application

--- a/src/app/containers/create-team/create-team.component.html
+++ b/src/app/containers/create-team/create-team.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="container"
+     data-test-id='create-team-page'>
     <div class="py-5">
         <h2>Create Team</h2>
     </div>
